HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeBoolParameter/Expected.uv
//! Expected diagnostic metadata for the FfiSafeBoolParameter rejected-source specimen.

expectedDiagnostic("E-TYP-2623", "rule.23.FfiSafe-Prohibited-Err")
